# jni_dome

./: .gitignore  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml
src/main/cpp/: CMakeLists.txt  Hello.h  jni_dome.cpp
src/main/kotlin/: Main.kt
src/main/rust/: Cargo.toml
src/main/rust/src/: lib.rs
